# XNAlaraLib

./: CMakeLists.txt
include/: binary_io.h  binary_xps.hpp  library.h
include/xps/: bone.hpp  header.hpp  mesh.hpp  model.hpp
src/: binary_io.cpp  binary_xps.cpp  main.cpp
src/xps/: bone.cpp  header.cpp  mesh.cpp  model.cpp
